--- a/shop/index.html
+++ b/shop/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="app">`
+    <div class="app">
         <header class="header">
             <div class="grid">
                 <nav class="header__navbar">
